[APP] Fixed the "no registered players at the moment" message in the registered players listing in admin and public tournament pages (was overlapping the left border)

--- a/app/styles/_admin.scss
+++ b/app/styles/_admin.scss
@@ -21,6 +21,10 @@
   margin-right: 8px;
 }
 
+#playersList div div {
+  margin-left:15px;
+}
+
 #playersList ul {
   list-style-type: none;
   margin: 0;
